deploy: fd94a38a04ff68ecfa60d224277d0b7376686768

--- a/developers/01-prepare.html
+++ b/developers/01-prepare.html
@@ -162,7 +162,7 @@
 <pre><code class="language-bash">git clone https://github.com/importantimport/hatsu.git &amp;&amp; cd hatsu
 </code></pre>
 <h2 id="contributing"><a class="header" href="#contributing">Contributing</a></h2>
-<p>Go to the hatsu folder and you can see these:</p>
+<p>Go to the <code>hatsu</code> folder and you can see these:</p>
 <ul>
 <li><a href="https://github.com/importantimport/hatsu/tree/main/docs"><code>docs</code></a> - The documentation you're looking at right now, uses <a href="https://github.com/rust-lang/mdBook">mdBook</a> to build.</li>
 <li><a href="https://github.com/importantimport/hatsu/tree/main/migration"><code>migration</code></a> - <a href="https://www.sea-ql.org/SeaORM/docs/migration/setting-up-migration/">SeaORM Migration</a>.</li>
