--- a/developers/01-prepare.html
+++ b/developers/01-prepare.html
@@ -151,11 +151,11 @@
                     <main>
                         <h1 id="prepare"><a class="header" href="#prepare">Prepare</a></h1>
 <p>To develop Hatsu, you should first <a href="https://www.rust-lang.org/tools/install">install Rust</a> and some dependencies.</p>
-<p>Arch-based distro:</p>
-<pre><code class="language-bash">sudo pacman -S git cargo openssl
-</code></pre>
-<p>Debian-based distro:</p>
-<pre><code class="language-bash">sudo apt install git cargo libssl-dev
+<pre><code class="language-bash"># Arch-based distro
+sudo pacman -S git cargo openssl
+
+# Debian-based distro
+sudo apt install git cargo libssl-dev
 </code></pre>
 <h2 id="clone-repository"><a class="header" href="#clone-repository">Clone Repository</a></h2>
 <p>It will create a <code>hatsu</code> subfolder in the current path.</p>
