deploy: 3bc5faf404f4479bbb8172d7b9095c35efd2a078

--- a/developers/03-docker-development.html
+++ b/developers/03-docker-development.html
@@ -165,8 +165,10 @@ sudo apt install docker.io docker-compose
 </code></pre>
 <p>If there is no build image, it will be built automatically at execution time.
 Hatsu uses <a href="https://crates.io/crates/cargo-chef">cargo-chef</a> in the <a href="https://github.com/importantimport/hatsu/blob/main/Dockerfile">Dockerfile</a>,
-which caches dependencies to avoid duplicate builds
-(i.e. you only need to build Hatsu itself afterwards)</p>
+which caches dependencies to avoid duplicate build dependencies.</p>
+<p>If you need to rebuild, add the <code>--build</code> flag:</p>
+<pre><code class="language-bash">docker-compose up -d --build
+</code></pre>
 
                     </main>
 
