deploy: 6286d08ecb3d7514ff5186f24910f407c89caa61

--- a/print.html
+++ b/print.html
@@ -250,6 +250,7 @@ which caches dependencies to avoid duplicate build dependencies.</p>
 <tr><td>Pleroma</td><td></td><td></td></tr>
 </tbody></table>
 </div><!-- After a period of time: if you wish to support the new platform, you can open a new discussion. -->
+<!-- TODO: Akkoma & Firefish -->
 
                     </main>
 
