--- a/others/00-compatibility-chart.html
+++ b/others/00-compatibility-chart.html
@@ -168,6 +168,7 @@
 <tr><td>Pleroma</td><td></td><td></td></tr>
 </tbody></table>
 </div><!-- After a period of time: if you wish to support the new platform, you can open a new discussion. -->
+<!-- TODO: Akkoma & Firefish -->
 
                     </main>
 
